# pyresult

./: LICENSE  README.md  pyproject.toml
examples/: parser.py  pipeline.py
src/pyresult/: __init__.py  decorators.py  lift_decorator.py  option.py  result.py  types.py
test/: test_chain.py  test_create.py  test_expect.py  test_map.py  test_result.py  test_unwrap.py
