[project]
name = "pyresult"
version = "0.1.0"
description = "A functional `Result` type for Python inspired by Rust's `Result<T, E>`."
readme = "README.md"
authors = [
    { name = "Kaonan Micadei", email = "6026964+kaosmicadei@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
